--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,7 +125,7 @@ section div{
   color:#ccc;
 }
 .rate:not(:checked) > label:before {
-  content: '? ';
+  content:'★ ';
 }
 .rate > input:checked ~ label {
   color: #ffc700;    
