--- a/public/css/testcss.css
+++ b/public/css/testcss.css
@@ -207,7 +207,7 @@ nav li > .nav-object {
 }
 
 .rate:not(:checked) > label:before {
-    content: '?';
+    content:'★ ';
 }
 
 .rate > input:checked ~ label {
